--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,9 +11,12 @@ build_script:
   - yarn build # команда сборки
 test_script:
   - npm test # скрипт тестирования
+environment:
+  access_token:
+    secure: zvJf04PyuDyqf4jjwwyBrw9chz6Q9x7OeBPN0jYQ9Y80ygA4VMOO4pimFzC8jgyt
 deploy_script: # скрипт развёртывания
   - git config --global credential.helper store
-  - git config --global user.name AppVeyor
-  - git config --global user.email ci@appveyor.com
-  - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
+  - ps: Set-Content -Path "$HOME\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewline
+  - git config --global user.name "aaogoltcov"
+  - git config --global user.email "aaogoltcov@mail.ru"
   - npx push-dir --dir=dist --branch=gh-pages --force --verbose
