--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "show:dist": "live-server dist"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
     "@babel/preset-env": "^7.12.10",
     "@webpack-cli/serve": "^1.1.0",
     "babel": "^6.23.0",
